ساخت نمایش رسید و چاپش

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "node-sass": "^9.0.0",
     "nouislider-react": "^3.4.1",
     "prop-types": "^15.8.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-auth-code-input": "^3.2.1",
