--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@fullcalendar/list": "^6.1.10",
+    "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "2.0.1",
     "@supabase/supabase-js": "^2.87.1",
     "@tanstack/match-sorter-utils": "^8.8.4",
@@ -38,6 +39,7 @@
     "bootstrap": "5.3.2",
     "chart.js": "4.4.1",
     "classnames": "^2.3.2",
+    "clsx": "^2.1.1",
     "draft-js": "^0.11.7",
     "echarts": "5.4.3",
     "echarts-for-react": "^3.0.1",
@@ -76,6 +78,7 @@
     "react-dropzone": "^14.2.3",
     "react-dual-listbox": "6.0.0",
     "react-flatpickr": "^3.10.13",
+    "react-hook-form": "^7.68.0",
     "react-i18next": "13.5.0",
     "react-image-lightbox": "^5.1.4",
     "react-input-mask": "^2.0.4",
@@ -95,7 +98,7 @@
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "react-scrollspy": "^3.4.3",
-    "react-select": "5.8.0",
+    "react-select": "^5.8.0",
     "react-simple-star-rating": "^5.1.7",
     "react-sparklines": "^1.7.0",
     "react-star-ratings": "^2.3.0",
@@ -118,7 +121,8 @@
     "sweetalert2": "^11.26.4",
     "swiper": "11.0.5",
     "toastr": "^2.1.4",
-    "yup": "1.3.2"
+    "yup": "1.3.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "7.23.4",
