--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "sweetalert2": "^11.26.4",
     "swiper": "11.0.5",
     "toastr": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "1.3.2",
     "zod": "^4.1.13"
   },
